objects/chargebeeapps__Contact_Associate_Site__c.object
<CustomObject>
    <fields>
        <fullName>chargebeeapps__CB_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Site</label>
        <referenceTo>chargebeeapps__CB_Sites__c</referenceTo>
        <relationshipLabel>CB Contact Sites</relationshipLabel>
        <relationshipName>Contact_Associate_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Associate_Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__SiteName__c</fullName>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CB Contact Site</label>
    <nameField>
        <displayFormat>Site-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CB Contact Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>